# desafio-maitha

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/api/: __init__.py
app/api/endpoints/: users.py
tests/: test_users.py
